- Db structure changed. - A Repository concept prototyped out in isolation and discarded (:|) - A central data holder introduced to ease the overall data management process

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnit4"
         multiDexEnabled true
     }
     buildTypes {
@@ -34,7 +34,13 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
+
     testCompile 'junit:junit:4.12'
+    testCompile 'org.powermock:powermock-api-mockito:1.6.4'
+    testCompile 'org.powermock:powermock-module-junit4-rule-agent:1.6.4'
+    testCompile 'org.powermock:powermock-module-junit4-rule:1.6.4'
+    testCompile 'org.powermock:powermock-module-junit4:1.6.4'
+
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.android.support:multidex:1.0.1'
@@ -42,5 +48,6 @@ dependencies {
     compile 'com.plivo:plivo-java:3.0.9'
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'org.greenrobot:eventbus-annotation-processor:3.0.1'
+    compile 'org.javatuples:javatuples:1.2'
+    compile 'org.apache.commons:commons-collections4:4.1'
 }
